<resources>
    <string name="app_name">TheMovieCL</string>
    <string name="action_settings">Settings</string>
    <string name="name_movie">Movie Title</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="plot">Plot Synopsis</string>
    <string name="rating">User Rating</string>
    <string name="release">Release Date</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_order_key">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="preview_page">Preview Page</string>
    <string name="next_page">Next Page</string>
    <string name="action_favorite">My Favorites movies</string>
    <string name="action_most_popular">Most popular movies</string>
    <string name="budget">Budget</string>
    <string name="home_page">Home Page</string>
    <string name="trailler">See Trailler</string>
    <string name="teaser">See Teaser</string>
    <string name="action_movies_saved">The movies saved</string>
    <string name="vote_count">Vote count higher than 2000</string>
</resources>